[gd_scene load_steps=17 format=3 uid="uid://b5fpc0pmkusq7"]

[ext_resource type="PackedScene" uid="uid://cdniymhmxc1r3" path="res://scenes/main_menu/gdd_mushy.tscn" id="1_8i3cr"]
[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_563nv"]
[ext_resource type="Texture2D" uid="uid://cmwsy2enlvj86" path="res://images/ui/title.PNG" id="2_2vxv1"]
[ext_resource type="Texture2D" uid="uid://bcc7nnodvbk6c" path="res://images/ui/large_button_normal.png" id="2_ja7es"]
[ext_resource type="Texture2D" uid="uid://petnjqf4dwwb" path="res://images/ui/large_button_pressed.png" id="3_fm7mq"]
[ext_resource type="Texture2D" uid="uid://eol1wracjl4i" path="res://images/ui/large_button_hover.png" id="4_4t0wq"]
[ext_resource type="AudioStream" uid="uid://gfin2ky0e4f4" path="res://sounds/Button Confirm-2024-01-14-00.wav" id="6_swuit"]
[ext_resource type="AudioStream" uid="uid://d0q1cdew41r68" path="res://sounds/Button Back-2024-01-14-00.wav" id="7_k4o2x"]
[ext_resource type="Texture2D" uid="uid://djtv1kqo60cjr" path="res://images/ui/black.png" id="7_s5p4u"]
[ext_resource type="Script" path="res://scenes/main_menu/parallax_background.gd" id="8_pd4qa"]
[ext_resource type="Texture2D" uid="uid://b0gl8oh8m6whn" path="res://images/ui/parallax_title_screen/Parallax title screen/5.png" id="9_lacmd"]
[ext_resource type="Texture2D" uid="uid://lyu6okx123p5" path="res://images/ui/parallax_title_screen/Parallax title screen/4.png" id="10_v1ljn"]
[ext_resource type="Texture2D" uid="uid://cvioraqpbwxhn" path="res://images/ui/parallax_title_screen/Parallax title screen/3.png" id="11_chk36"]
[ext_resource type="Texture2D" uid="uid://bhkva7w2p4oct" path="res://images/ui/parallax_title_screen/Parallax title screen/2.png" id="12_i6v0i"]
[ext_resource type="Texture2D" uid="uid://bhqqnlj8a4ic2" path="res://images/ui/parallax_title_screen/Parallax title screen/1.png" id="13_delgv"]
[ext_resource type="Texture2D" uid="uid://ckfdaysgs8ydm" path="res://images/ui/landrat_software_logo.png" id="15_1vtja"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_563nv")

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="GameTitle" type="Sprite2D" parent="Canvas"]
unique_name_in_owner = true
position = Vector2(576, 166)
scale = Vector2(2.2, 2.2)
texture = ExtResource("2_2vxv1")

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="DancingMushy" parent="Canvas/VBoxContainer" instance=ExtResource("1_8i3cr")]
position = Vector2(-12, 55)

[node name="HBoxUnused" type="HBoxContainer" parent="Canvas"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -398.0
offset_right = 141.0
offset_bottom = -141.0
grow_vertical = 0

[node name="VBoxButtons" type="VBoxContainer" parent="Canvas/HBoxUnused"]
layout_mode = 2

[node name="LabelNewGame" type="Label" parent="Canvas/HBoxUnused/VBoxButtons"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "New Game"
horizontal_alignment = 1

[node name="ButtonNewGame" type="TextureButton" parent="Canvas/HBoxUnused/VBoxButtons"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="LabelOptions" type="Label" parent="Canvas/HBoxUnused/VBoxButtons"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Options"
horizontal_alignment = 1

[node name="ButtonOptions" type="TextureButton" parent="Canvas/HBoxUnused/VBoxButtons"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="LabelQuit" type="Label" parent="Canvas/HBoxUnused/VBoxButtons"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Quit"
horizontal_alignment = 1

[node name="ButtonQuit" type="TextureButton" parent="Canvas/HBoxUnused/VBoxButtons"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="VBoxSlots" type="VBoxContainer" parent="Canvas/HBoxUnused"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="LabelSlot1" type="Label" parent="Canvas/HBoxUnused/VBoxSlots"]
layout_mode = 2
text = "Slot 1"
horizontal_alignment = 1

[node name="ButtonSlot1" type="TextureButton" parent="Canvas/HBoxUnused/VBoxSlots"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="LabelSlot2" type="Label" parent="Canvas/HBoxUnused/VBoxSlots"]
layout_mode = 2
text = "Slot 2"
horizontal_alignment = 1

[node name="ButtonSlot2" type="TextureButton" parent="Canvas/HBoxUnused/VBoxSlots"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="LabelSlot3" type="Label" parent="Canvas/HBoxUnused/VBoxSlots"]
layout_mode = 2
text = "Slot 3"
horizontal_alignment = 1

[node name="ButtonSlot3" type="TextureButton" parent="Canvas/HBoxUnused/VBoxSlots"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="LabelNewGame" type="Label" parent="Canvas"]
offset_left = 26.0
offset_top = 270.0
offset_right = 122.0
offset_bottom = 293.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "New Game"
horizontal_alignment = 1

[node name="ButtonNewGame" type="TextureButton" parent="Canvas"]
offset_left = 26.0
offset_top = 295.0
offset_right = 122.0
offset_bottom = 325.0
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="LabelQuit" type="Label" parent="Canvas"]
offset_left = 26.0
offset_top = 390.0
offset_right = 122.0
offset_bottom = 413.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Quit"
horizontal_alignment = 1

[node name="ButtonQuit" type="TextureButton" parent="Canvas"]
offset_left = 26.0
offset_top = 415.0
offset_right = 122.0
offset_bottom = 445.0
size_flags_vertical = 3
texture_normal = ExtResource("2_ja7es")
texture_pressed = ExtResource("3_fm7mq")
texture_hover = ExtResource("4_4t0wq")
stretch_mode = 3

[node name="BlackOut" type="Sprite2D" parent="Canvas"]
unique_name_in_owner = true
scale = Vector2(1.53, 1.08)
texture = ExtResource("7_s5p4u")
offset = Vector2(400, 300)

[node name="LandratLogo" type="Sprite2D" parent="Canvas"]
unique_name_in_owner = true
position = Vector2(840, -89)
rotation = -6.28319
texture = ExtResource("15_1vtja")
offset = Vector2(-960, 413)

[node name="AudioConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_swuit")

[node name="AudioBack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_k4o2x")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(576, 324)
scale = Vector2(1.8, 1.8)
transform = Transform2D(1.8, 0, 0, 1.8, 576, 324)
script = ExtResource("8_pd4qa")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("9_lacmd")
metadata/_edit_lock_ = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("10_v1ljn")
metadata/_edit_lock_ = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("11_chk36")
metadata/_edit_lock_ = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("12_i6v0i")
metadata/_edit_lock_ = true

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.9, 0.9)
motion_mirroring = Vector2(640, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource("13_delgv")
metadata/_edit_lock_ = true

[connection signal="pressed" from="Canvas/HBoxUnused/VBoxButtons/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="Canvas/HBoxUnused/VBoxButtons/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="Canvas/HBoxUnused/VBoxSlots/ButtonSlot1" to="." method="_on_button_slot_1_pressed"]
[connection signal="pressed" from="Canvas/HBoxUnused/VBoxSlots/ButtonSlot2" to="." method="_on_button_slot_2_pressed"]
[connection signal="pressed" from="Canvas/HBoxUnused/VBoxSlots/ButtonSlot3" to="." method="_on_button_slot_3_pressed"]
[connection signal="pressed" from="Canvas/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="Canvas/ButtonQuit" to="." method="_on_button_quit_pressed"]
